# GBGPU

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  c_test.py  orig_test.py  pyproject.toml  setup.py  test.py  test_gbgpu.py  test_likelihood.py
.github/workflows/: pages.yml  publish.yml  run-tests.yml
docs/doctrees/: GBGPU_tutorial.doctree  README.doctree  environment.pickle  index.doctree
docs/doctrees/nbsphinx/: GBGPU_tutorial.ipynb
docs/doctrees/user/: derivedwaves.doctree  main.doctree  third.doctree  utils.doctree
docs/html/: .buildinfo  GBGPU_tutorial.html  GBGPU_tutorial.ipynb  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: GBGPU_tutorial.ipynb.txt  README.rst.txt  index.rst.txt
docs/html/_sources/user/: derivedwaves.rst.txt  utils.rst.txt
docs/html/user/: derivedwaves.html  main.html  utils.html
docs/source/: GBGPU_tutorial.ipynb  README.rst  conf.py  index.rst
docs/source/user/: derivedwaves.rst  main.rst
examples/: GBGPU_examples.ipynb  GBGPU_tutorial.ipynb  basic_example.py
gbgpu/: GBGPU.pyx  Utils.pyx  gbgpu.py  new_gbgpu.py  thirdbody.py
gbgpu/cutils/include/: SharedMemoryGBGPU.hpp  gbgpu_utils.hh
gbgpu/cutils/src/: GBGPU.pyx  SharedMemoryGBGPU.cu  gbgpu_utils.cu  sharedmemgbgpu.pyx
gbgpu/src/: GB.c  GB.h  LISA.c  createGPUHolders.cu  global.h  kernel.cu  likelihood.cu  likelihood.hh  manager.cu  manager.hh
gbgpu/tests/: test_gbgpu.py  test_thirdbody.py
gbgpu/utils/: citation.py  utility.py
include/: Constants.h  LISA.h  SharedMemoryGBGPU.hpp  ThirdSharedMemoryGBGPU.hpp  common.hpp  gbgpu_utils.hh  global.h  new_fastGB.hh
old_gbgpu/gbgpu/: old_gbgpu.py
old_gbgpu/gbgpu/utils/: utility.py
population_paper/: gbmodels.py  gbsetups.py  guides.py  new_evidence_runs.py  new_posterior_runs.py  new_search_runs.py  runner.py  settings.py
scripts/: prebuild.py
src/: CMakeLists.txt  GBGPU.pyx  GBGPU_third.pyx  SharedMemoryGBGPU.cu  ThirdSharedMemoryGBGPU.cu  gbgpu_utils.cu  new_fastGB.cu  sharedmemgbgpu.pyx  thirdsharedmemgbgpu.pyx
src/gbgpu/: CMakeLists.txt  __init__.py  gbgpu.py  thirdbody.py
src/gbgpu/cutils/: CMakeLists.txt  SharedMemoryGBGPU.cu  SharedMemoryGBGPU.hpp  __init__.py  gbgpu_utils.cu  gbgpu_utils.hh  gbgpu_utils_wrap.pyx  global.h  sharedmemgbgpu.pyx
src/gbgpu/cutils/include/: LISA.h  SharedMemoryGBGPU.hpp  common.hpp  gbgpu_utils.hh  global.h
src/gbgpu/cutils/src/: GBGPU.pyx  SharedMemoryGBGPU.cu  sharedmemgbgpu.pyx
src/gbgpu/utils/: constants.py  exceptions.py  globals.py  parallelbase.py  utility.py
tests/: test_gbgpu.py  test_thirdbody.py
