[build-system]
requires = [
  "Cython",
  "numpy",
  "lisaanalysistools>=1.0.17",
  "scikit_build_core",
]
build-backend = "scikit_build_core.build"

[project]
name = "gbgpu"
version = "1.1.6"
description = "GPU/CPU Galactic Binary Waveforms"
readme = "README.md"
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
authors = [
  { name = "Michael Katz", email = "mikekatz04@gmail.com" },
]
readme = "README.md"

requires-python = ">= 3.9"
dependencies = [
  "requests",
  "numpy",
  "scipy",
  "matplotlib",
  "h5py",
  "lisaanalysistools>=1.0.17",
]

[project.optional-dependencies]
cuda11 = [
  "cupy-cuda11x"
]
cuda12 = [
  "cupy-cuda12x"
]

classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: OSI Approved :: Apache License",
  "Natural Language :: English",
  "Programming Language :: C++",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = [ "version" ]

dependencies = [
  "exceptiongroup; python_version<'3.11'", # To access ExceptionGroup with Python 3.9 and 3.10
  "h5py",
  "jsonschema",                            # To validate content of file registry
  "lisaconstants",
  "multispline",
  "numba",
  "numpy",
  "nvidia-ml-py",                          # To detect CUDA version if any
  "platformdirs",                          # To locate config and data dir on all platforms
  "pydantic",                              # To handle citations and references with advanced dataclasses
  "pyyaml",                                # To read file registry
  "requests",                              # To download files automatically
  "rich",                                  # To display downlaod progress bar
  "scipy",
  "tqdm",
  "wrapt",
  #@DEPS_CUPYCUDA@,
  #@DEPS_FEWCORE@,
]

optional-dependencies.doc = [
  "ipykernel",
  "ipython",
  "ipywidgets",
  "myst-parser",
  "nbsphinx",
  "pypandoc",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-tippy",
]

optional-dependencies.sampling = [
  "eryn",
  "fastlisaresponse",
  "lisaanalysistools",
  "lisatools",
]

optional-dependencies.testing = [
  "matplotlib",
]

urls.Documentation = "https://bhptoolkit.org/FastEMRIWaveforms/html/index.html"
urls.Download = "https://pypi.org/project/fastemriwaveforms/#files"
urls.Homepage = "https://github.com/BlackHolePerturbationToolkit/FastEMRIWaveforms"
urls.Source = "https://github.com/BlackHolePerturbationToolkit/FastEMRIWaveforms"
urls.Tracker = "https://github.com/BlackHolePerturbationToolkit/FastEMRIWaveforms/issues"

scripts.few_citations = "gbgpu.cmd.citations:main" #@SKIP_PLUGIN@
scripts.few_files = "gbgpu.cmd.files:main"         #@SKIP_PLUGIN@

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
version_file = "src/gbgpu/_version.py"
#@FALLBACK_VERSION@

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [
  "src/gbgpu/_version.py",
  "src/gbgpu/git_version.py",                 #@SKIP_PLUGIN@
  "src/few_backend_cuda11x/git_version.py",
  "src/few_backend_cuda12x/git_version.py",
  "tests/",
]
sdist.exclude = [
  ".devcontainer/",
  ".github/",
  "dataset-preprocessing/",
  "docs/",
  "examples/",
  ".cmake-format.yaml",
  ".gitignore",
  ".pre-commit-config.yaml",
  "src/gbgpu/_editable.py",
  "src/gbgpu/tests/base.py",
  "src/gbgpu/git_version.py.in",
]

wheel.exclude = [
  "**.pyx",
  "**.cu",
  "**.cxx",
  "**.hh",
  "**.h",
  "**.hpp",
  "**/CMakeLists.txt",
  "lib/pkgconfig",
  "lib/cmake",
  "lib/*.so",
  "lib/*.a",
]

[tool.scikit-build.wheel.packages]
gbgpu = "src/gbgpu"       #@SKIP_PLUGIN@
"gbgpu/tests" = "tests" #@SKIP_PLUGIN@


lint.extend-select = [
  "I",
  "T201", # Fail when "print" is used, to be replaced with logger calls
]

lint.ignore = [ "E741" ]

lint.extend-per-file-ignores."*.ipynb" = [ "T201" ] # Allow "print" statements in notebooks

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.coverage]
paths.source = [
  "src/",
  "**/site-packages/",
]

report.omit = [
  "*/gbgpu/_version.py",
  "*/gbgpu/tests/*.py",
  "*/gbgpu/git_version.py",
  "*/gbgpu_backend_*/git_version.py",
]