[build-system]
requires = [
  "Cython",
  "numpy",
  "lisaanalysistools>=1.0.17",
  "scikit_build_core",
]
build-backend = "scikit_build_core.build"

[project]
name = "GBGPU"

description = "GPU/CPU Galactic Binary Waveforms"

authors = [
  { name = "Michael Katz", email = "mikekatz04@gmail.com" },
]
readme = "README.md"

requires-python = ">= 3.9"

dependencies = [
  "lisaanalysistools>=1.0.17",
  "exceptiongroup; python_version<'3.11'", # To access ExceptionGroup with Python 3.9 and 3.10
  "jsonschema",                            # To validate content of file registry
  "lisaconstants",
  "numpy",
  "nvidia-ml-py",                          # To detect CUDA version if any
  "platformdirs",                          # To locate config and data dir on all platforms
  "pydantic",                              # To handle citations and references with advanced dataclasses
  "pyyaml",                                # To read file registry
  "requests",                              # To download files automatically
  "rich",                                  # To display downlaod progress bar
  "scipy",
  "tqdm",
  "wrapt",
  #@DEPS_CUPYCUDA@,
  #@DEPS_GBGPUCORE@,
]


classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: C++",
  "Programming Language :: Cython",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dynamic = [ "version" ]

optional-dependencies.doc = [
  "ipykernel",
  "ipython",
  "ipywidgets",
  "myst-parser",
  "nbsphinx",
  "pypandoc",
  "sphinx",
  "sphinx-rtd-theme",
  "sphinx-tippy",
]

optional-dependencies.sampling = [
  "eryn",
  "fastlisaresponse",
  "lisaanalysistools",
  "lisatools",
]

optional-dependencies.testing = [
  "matplotlib",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
version_file = "src/gbgpu/_version.py"
#@FALLBACK_VERSION@

[tool.scikit-build]
wheel.packages = ["src/gbgpu"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = [
  "src/gbgpu/_version.py",
  "src/gbgpu/git_version.py",                 #@SKIP_PLUGIN@
  "src/gbgpu_backend_cuda11x/git_version.py",
  "src/gbgpu_backend_cuda12x/git_version.py",
  "tests/"
]
sdist.exclude = [
  ".devcontainer/",
  ".github/",
  "dataset-preprocessing/",
  "docs/",
  "examples/",
  ".cmake-format.yaml",
  ".gitignore",
  ".pre-commit-config.yaml",
  "src/gbgpu/_editable.py",
  "tests/base.py",
]

wheel.exclude = [
  "**.pyx",
  "**.cu",
  "**.cxx",
  "**.hh",
  "**.h",
  "**.hpp",
  "**/CMakeLists.txt",
  "lib/pkgconfig",
  "lib/cmake",
  "lib/*.so",
  "lib/*.a",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.coverage]
paths.source = [
  "src/",
  "**/site-packages/",
]

report.omit = [
  "*/gbgpu/_version.py",
  "*/gbgpu/tests/*.py",
  "*/gbgpu/git_version.py",
  "*/gbgpu_backend_*/git_version.py",
]